[package]
name = "laos-relay"
version = "1.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.1.5" }
futures = "0.3.28"
hex = "0.4"
log = "0.4.19"
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
rustc-hex = "2.1"
structopt = "0.3"
signal-hook = "0.3.16"
signal-hook-async-std = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }

# Bridge dependencies
evochain-primitives = { git = "https://github.com/freeverseio/laos-evolution-node", branch = "dev" }
bp-header-chain = { path = "../../primitives/header-chain" }
bp-messages = { path = "../../primitives/messages" }
bp-parachains = { path = "../../primitives/parachains" }
bp-runtime = { path = "../../primitives/runtime" }
bridge-runtime-common = { path = "../../bin/runtime-common" }
pallet-bridge-parachains = { path = "../../modules/parachains" }
pallet-bridge-messages = { path = "../../modules/messages" }
relay-evochain-client = { path = "../client-evochain" }
relay-ownership-parachain-client = { path = "../client-ownership-parachain" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }
# we are not using this runtime to craft call or transactions, but we still need it
# to prepare large XCM messages
substrate-relay-helper = { path = "../lib-substrate-relay" }

node-template-runtime = { git = "https://github.com/freeverseio/laos-evolution-node", branch = "dev" }
laos-runtime = { git = "https://github.com/freeverseio/laos-ownership-node", branch = "feat/relayer" }

# Substrate Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Polkadot Dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

[dev-dependencies]
bp-test-utils = { path = "../../primitives/test-utils" }
hex-literal = "0.4"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
tempfile = "3.7"
finality-grandpa = { version = "0.16.2" }
